--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            background-color: #f8f8f8;
+            background-color: #f0f8ff; /* 浅蓝色背景 */
             margin: 0;
             padding: 0;
             display: flex;
@@ -27,13 +27,13 @@
         }
 
         h1 {
-            color: #333;
+            color: #007bff; /* 深蓝色标题 */
             font-size: 24px;
             margin-bottom: 20px;
         }
 
         p {
-            color: #666;
+            color: #333;
             font-size: 16px;
             line-height: 1.6;
         }
@@ -50,7 +50,7 @@
         }
 
         a:hover {
-            background-color: #0056b3;
+            background-color: #0056b3; /* 深蓝色按钮悬停效果 */
         }
     </style>
 </head>
