--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>备用网址</title>
+    <title>51楼凤最新网址</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -57,10 +57,10 @@
 
 <body>
     <div class="container">
-        <h1>备用网址</h1>
-        <p>这是一个备用网址页面，您可以在需要时使用。</p>
-        <p>如果原网址无法访问，请点击下方按钮访问备用网址。</p>
-        <a href="https://www.example.com" target="_blank">访问备用网址</a>
+        <h1>最近域名被封,点击以下备用地址：</h1>
+        <a href="https://51loufeng.cc/" target="_blank">https://51loufeng.cc</a>
+        <p>请务必收藏我们Github的防封地址：</p>
+        <a href="https://51loufeng.github.io/" target="_blank">https://51loufeng.github.io/</a>
     </div>
 </body>
 
