--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
 
 <body>
     <div class="container">
-        <h1>最近域名被封,点击以下备用地址：</h1>
+        <p>最近域名被封,点击以下备用地址：</p>
         <a href="https://51loufeng.cc/" target="_blank">https://51loufeng.cc</a>
-        <p>请务必收藏我们Github的防封地址：</p>
+        <h1>请务必收藏我们Github的防封地址：</h1>
         <a href="https://51loufeng.github.io/" target="_blank">https://51loufeng.github.io/</a>
     </div>
 </body>
