--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
+            font-size: 20px;
         }
 
         .container {
@@ -28,37 +29,28 @@
 
         h1 {
             color: #007bff; /* 深蓝色标题 */
-            font-size: 24px;
             margin-bottom: 20px;
         }
 
         p {
             color: #333;
-            font-size: 16px;
             line-height: 1.6;
         }
+        span{
 
-        a {
-            display: inline-block;
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #007bff;
-            color: #fff;
-            text-decoration: none;
-            border-radius: 5px;
-            transition: background-color 0.3s;
+        	display: inline-block;
+        	margin-left: 20px;
         }
 
-        a:hover {
-            background-color: #0056b3; /* 深蓝色按钮悬停效果 */
-        }
+
+
     </style>
 </head>
 
 <body>
     <div class="container">
         <p>最近域名被封,点击以下备用地址：</p>
-        <a href="https://51loufeng.cc/" target="_blank">https://51loufeng.cc</a>
+        <p><a href="https://51loufeng.cc/" target="_blank">https://51loufeng.cc</a><span>可用</span></p>
         <h1>请务必收藏我们Github的防封地址：</h1>
         <a href="https://51loufeng.github.io/" target="_blank">https://51loufeng.github.io/</a>
     </div>
